[package]
name = "wio"
version = "0.1.0"
authors = ["Mitsuhiro Matsumoto <denkende.kissa@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
oorandom = "11.1.2"
support = { path = "support" }
wio_terminal = "0.3"
panic-halt = "0.2"
cortex-m = "0.6.4"
cortex-m-rt = "0.6.13"
nb = "0.1"
accelerometer = "0.12.0"
embedded-graphics = "0.6.2"
# only on host pc
#embedded-graphics-simulator = "0.2.1"
heapless = "0.5.6"

# in chapter7
# wio_splash = { path = "../wio_splash", optional = true }
microfft = { version = "0.3.1", optional = true }
micromath = { version = "1.1.0", optional = true }

[features]
# in chapter7
# splash = ["wio_splash"]
app = ["microfft", "micromath"]

# in chapter7
# [[example]]
# name = "7-4-splash"
# required-features = ["splash"]

[[example]]
name = "8-1-stop_watch"
required-features = ["app"]

[[example]]
name = "8-2-mic_fft"
required-features = ["app"]
